<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.create.SearchBranchesNearbyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nameTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_large"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/create_party_name_title_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_headline"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/editFriendImageButton"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/space_large"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:src="@drawable/ic_plus"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/nameTitleTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/nameTitleTextView"
                    app:tint="@color/gray700"
                    tools:visibility="visible" />

                <ViewFlipper
                    android:id="@+id/friendViewFlipper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editFriendImageButton">

                    <LinearLayout
                        android:id="@+id/friendAddressView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/space_large"
                        android:orientation="vertical"
                        tools:background="@color/gray300"
                        tools:layout_height="100dp" />

                    <TextView
                        android:id="@+id/addFriendTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_large"
                        android:layout_marginTop="@dimen/space_normal"
                        android:background="@drawable/bg_white_border_grey300_corner_5"
                        android:clickable="true"
                        android:drawablePadding="@dimen/space_normal"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:paddingHorizontal="@dimen/space_larger"
                        android:paddingVertical="@dimen/space_normal"
                        android:text="@string/create_party_action_add_name_label"
                        app:drawableStartCompat="@drawable/ic_plus"
                        app:drawableTint="@color/gray500" />

                </ViewFlipper>

                <TextView
                    android:id="@+id/restaurantTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_large"
                    android:layout_marginTop="@dimen/space_normal"
                    android:text="@string/create_party_restaurant_title_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_headline"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friendViewFlipper" />

                <ViewFlipper
                    android:id="@+id/restaurantViewFlipper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restaurantTitleTextView">

                    <TextView
                        android:id="@+id/restaurantNameTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_large"
                        android:layout_marginTop="@dimen/space_normal"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:textColor="@color/primary_red"
                        android:textSize="@dimen/text_headline"
                        android:textStyle="bold"
                        tools:text="ตี๋น้อย ทุกสาขา" />

                    <TextView
                        android:id="@+id/selectRestaurantTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_large"
                        android:layout_marginTop="@dimen/space_normal"
                        android:background="@drawable/bg_white_border_grey300_corner_5"
                        android:clickable="true"
                        android:drawablePadding="@dimen/space_normal"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:paddingHorizontal="@dimen/space_larger"
                        android:paddingVertical="@dimen/space_normal"
                        android:text="@string/create_party_action_select_restaurant_label"
                        app:drawableStartCompat="@drawable/ic_plus"
                        app:drawableTint="@color/gray500" />

                </ViewFlipper>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/searchRestaurantButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/space_large"
            android:text="@string/create_party_search_restaurant_nearby_friend_action_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</layout>
